# lego-songbook-django

./: .gitignore  README.md  fabfile.py  pyproject.toml  pytest.ini  tasks.py  tox.ini
.github/workflows/: test-and-deploy.yaml
apps/: manage.py
apps/lego_songbook/: wsgi.py
apps/legoworship/: asgi.py  settings.py  urls.py  wsgi.py
apps/legoworship/settings/: common.py  local.py  production.py
apps/songbook/: admin.py  apps.py  models.py  tables.py  urls.py  views.py
apps/songbook/migrations/: 0001_initial.py  0002_alter_position_team_non_blank.py  0003_alter_team_servicetype_non_blank.py  0004_set_position_assignment_person_position_unique_together.py  0005_remove_song_arrangement_table.py  0006_auto_20200207_0909.py  0007_auto_20200207_0916.py  0008_add_song_attachment_file_name_field.py  0009_remove_setlist_model.py
apps/songbook/static/legoworship/css/: main.css
apps/songbook/static/songbook/: style.css
apps/songbook/templates/legoworship/: base.html
apps/songbook/templates/songbook/: base.html  index.html  songs.html
apps/songbook/tests/test_models/: test_person.py  test_plan.py  test_position.py  test_position_assignment.py  test_song_arrangement.py  test_song_attachement.py
lego_songbook/: manage.py
lego_songbook/lego_songbook/: asgi.py  settings.py  urls.py  wsgi.py
lego_songbook/songbook/: admin.py  models.py  tables.py  urls.py  views.py
lego_songbook/songbook/migrations/: 0001_initial.py  0002_auto_20200108_1338.py  0002_auto_20200108_1338_squashed_0016_plan_service_type.py  0003_auto_20200130_0948.py  0004_auto_20200130_1001.py  0005_auto_20200130_1005.py  0006_auto_20200130_1016.py  0007_auto_20200130_1024.py  0008_team_positions.py  0009_auto_20200130_1211.py  0010_auto_20200130_1239.py  0011_arrangement_key.py  0012_auto_20200130_1744.py  0013_auto_20200130_1804.py  0014_auto_20200131_0708.py  0015_auto_20200131_1130.py  0016_plan_service_type.py
lego_songbook/songbook/templates/songbook/: index.html  setlist_list.html  setlists.html  song_list.html  songs.html
lego_songbook/songbook/tests/: test_models.py
(+12 files in other folders)
